# AdventOfCode-2025

./: .gitignore  Cargo.toml  README.md  bench.py  download_inputs.py  index.html
.github/workflows/: ui.yml
assets/: index-0xrcNBE9.js  index-B0SdVodc.js  index-B1AmByw6.js  index-BGVr6YtP.js  index-BegHWe-G.css  index-BfWdExjA.js  index-CZAdyqQW.js  index-C_RGZrIg.css  index-C_Wnm7qZ.js  index-Cce_ax7k.js  index-CyaYzev1.js  index-D1fY11ji.js  index-DBfg3EbN.js  index-DF5SJIcJ.js  index-DGLT5HKc.js  index-DMvmNLCX.js  index-DOKgi1b0.js  index-DSUedHnB.css  index-DVjs3arF.js  index-DYtdV45N.js  index-DqurWBcb.js  index-gcNYK7WI.js
bench_ui/: .gitignore  .prettierrc  codegen.ts  index.html  package.json  tsconfig.json  vite.config.ts
bench_ui/src/: Page.svelte  Part.svelte  Problem.svelte  main.ts  problems.ts  style.css  types.ts
benches/: Cargo.toml
benches/benches/: bench.rs
common/: Cargo.toml
common/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
problem1/: Cargo.toml
problem1/benches/: bench.rs
problem1/src/: part1.rs  part2.rs
problem10/: Cargo.toml
problem10/benches/: bench.rs
problem11/: Cargo.toml
problem11/benches/: bench.rs
problem11/src/: part1.rs  part2.rs
problem12/: Cargo.toml
problem12/benches/: bench.rs
problem12/src/: part1.rs
problem2/: Cargo.toml
problem2/benches/: bench.rs
problem2/src/: part1.rs  part2.rs
problem3/: Cargo.toml
problem3/benches/: bench.rs
problem3/src/: part1.rs  part2.rs
problem4/: Cargo.toml
problem4/benches/: bench.rs
problem4/src/: part1.rs  part2.rs
problem5/: Cargo.toml
problem5/benches/: bench.rs
problem5/src/: part1.rs  part2.rs
problem6/: Cargo.toml
problem6/benches/: bench.rs
problem6/src/: part1.rs  part2.rs
problem7/: Cargo.toml
problem7/benches/: bench.rs
problem7/src/: part1.rs  part2.rs
problem8/: Cargo.toml
problem8/benches/: bench.rs
problem8/src/: part1.rs  part2.rs
problem9/: Cargo.toml
problem9/benches/: bench.rs
problem9/src/: part1.rs  part2.rs
