[workspace]
resolver = "3"
members = [
    "problem1",
    "problem2",
    "problem3",
    "problem4",
    "problem5",
    "problem6",
    "problem7",
    "problem8",
    "problem9",
    "problem10",
    "problem11",
    "problem12",
    "benches",
    "common",
    "macros",
]

[profile.release]
debug = false
opt-level = 3
