[package]
name = "problem2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "problem2_part1"
path = "src/part1.rs"

[[bin]]
name = "problem2_part2"
path = "src/part2.rs"

[dependencies]
anyhow = "1.0.100"
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = "0.14.0"
rayon = "1.11.0"
