[package]
name = "problem2"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
bench = []
cli = []

[[bin]]
name = "problem2_part1"
path = "src/part1.rs"

[[bin]]
name = "problem2_part2"
path = "src/part2.rs"

[[bench]]
name = "problem2_bench"
path = "benches/bench.rs"
harness = false
required-features = ["bench"]

[dependencies]
anyhow = "1.0.100"
common = { version = "0.1.0", path = "../common" }
indicatif = { version = "0.18.3", features = ["rayon"] }
iter-first-max = "0.1.2"
itertools = "0.14.0"
macros = { version = "0.1.0", path = "../macros" }
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.8.0"
